fix: add all whitespaces after properties according to rule 3.6 in html-and-css.md

--- a/style.css
+++ b/style.css
@@ -145,9 +145,9 @@
 
 .list-item_editable .text-input {
   display: inline-block;
-  width: 224px
+  width: 224px;
 }
 
 .list-item_editable .label {
-  display:none;
+  display: none;
 }
